--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@aws-amplify/ui-react": "^3.0.2",
     "@capacitor/app": "1.1.1",
     "@capacitor/core": "3.4.3",
     "@capacitor/haptics": "1.1.4",
@@ -19,6 +20,7 @@
     "@types/react-dom": "^16.9.16",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "aws-amplify": "^4.3.26",
     "ionicons": "^5.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
