--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@awesome-cordova-plugins/barcode-scanner": "^5.44.0",
+    "@awesome-cordova-plugins/core": "^5.44.0",
     "@aws-amplify/ui-react": "^3.0.2",
     "@capacitor/android": "3.6.0",
     "@capacitor/app": "1.1.1",
-    "@capacitor/core": "3.4.3",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/ios": "3.6.0",
     "@capacitor/keyboard": "1.2.2",
@@ -24,6 +25,7 @@
     "@types/react-router-dom": "^5.1.7",
     "aws-amplify": "^4.3.26",
     "ionicons": "^5.4.0",
+    "phonegap-plugin-barcodescanner": "^8.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.3.3",
@@ -82,6 +84,7 @@
   },
   "devDependencies": {
     "@capacitor/cli": "3.4.3",
+    "@capacitor/core": "^3.6.0",
     "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-essentials": "^6.5.9",
     "@storybook/addon-interactions": "^6.5.9",
@@ -92,8 +95,10 @@
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "0.0.13",
+    "ajv": "^6.12.6",
     "babel-plugin-named-exports-order": "0.0.2",
     "prop-types": "^15.8.1",
+    "rxjs": "^7.5.6",
     "webpack": "^5.73.0"
   },
   "description": "An Ionic project"
