--- a/package.json
+++ b/package.json
@@ -96,9 +96,12 @@
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "0.0.13",
     "ajv": "^6.12.6",
+    "autoprefixer": "^10.4.8",
     "babel-plugin-named-exports-order": "0.0.2",
+    "postcss": "^8.4.16",
     "prop-types": "^15.8.1",
     "rxjs": "^7.5.6",
+    "tailwindcss": "^3.1.8",
     "webpack": "^5.74.0"
   },
   "description": "An Ionic project"
