--- a/.graphqlconfig.yml
+++ b/.graphqlconfig.yml
@@ -1,18 +1,12 @@
 projects:
-  qfesassets:
-    schemaPath: amplify/backend/api/qfesassets/build/schema.graphql
+  QFESAssetAPI:
+    schemaPath: src/graphql/schema.json
     includes:
-      - src/graphql/**/*.js
+      - src/graphql/**/*.ts
     excludes:
       - ./amplify/**
     extensions:
       amplify:
-        codeGenTarget: javascript
-        generatedFileName: ''
+        codeGenTarget: typescript
+        generatedFileName: src/API.ts
         docsFilePath: src/graphql
-        region: ap-southeast-2
-        apiId: null
-        maxDepth: 2
-extensions:
-  amplify:
-    version: 3
