--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-router": "^5.3.3",
     "react-router-dom": "^5.3.3",
     "react-scripts": "^5.0.0",
+    "react-signature-canvas": "^1.0.6",
     "typescript": "^4.7.4",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
@@ -97,6 +98,7 @@
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "0.0.13",
+    "@types/react-signature-canvas": "^1.0.2",
     "ajv": "^6.12.6",
     "autoprefixer": "^10.4.8",
     "babel-plugin-named-exports-order": "0.0.2",
